tests/parsing/smtlib/v2.7/errors/004_qual_identifier_bad_identifier_1.smt2
(set-logic ALL)
(assert (as _ foo))
